# nexarq-ai

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NEXARQ.md  README.md  SECURITY.md  bunfig.toml  install.ps1  install.sh  package.json  pyproject.toml  tsconfig.base.json
.claude/skills/: SKILL.md
agents/: agent-template.ts  index.ts  tsconfig.json
agents/design/: api-design-agent.ts  architecture-agent.ts  database-agent.ts  dependency-agent.ts  devops-agent.ts  error-handling-agent.ts  index.ts
agents/docs/: accessibility-agent.ts  docstring-agent.ts  i18n-agent.ts  index.ts  logging-agent.ts  standards-agent.ts
agents/meta/: ai-fixes-agent.ts  explain-agent.ts  index.ts  next-steps-agent.ts  risk-scoring-agent.ts  summary-agent.ts
agents/quality/: bugs-agent.ts  code-smells-agent.ts  concurrency-agent.ts  index.ts  maintainability-agent.ts  performance-agent.ts  refactor-agent.ts  resource-usage-agent.ts  review-agent.ts  style-agent.ts  type-safety-agent.ts
agents/security/: compliance-agent.ts  deep-analysis-agent.ts  index.ts  memory-safety-agent.ts  secrets-agent.ts  security-agent.ts
agents/testing/: index.ts  test-coverage-agent.ts
cli/: package.json  tsconfig.json
cli/src/: index.ts
common/: package.json
common/src/: index.ts
docs/: agents-and-tools.md  architecture.md  development.md  environment-variables.md  feature-guide.md  request-flow.md
github-action/: action.yml  package.json  tsconfig.json
github-action/src/: index.ts
nexarq_cli/: __init__.py  __main__.py  main.py
nexarq_cli/agents/: __init__.py  base.py  orchestrator.py  registry.py  selector.py  tier.py  tools.py
nexarq_cli/auth/: __init__.py  github.py  token.py
nexarq_cli/cli/: agent_cmd.py  apply_cmd.py  config_cmd.py  disable_cmd.py  doctor_cmd.py  enable_cmd.py  help_cmd.py  hook_cmd.py  init_cmd.py  install_cmd.py  interactive.py  mcp_cmd.py  (+4 more)
scripts/: install.ps1  install.sh
sdk/: package.json  tsconfig.json
tests/: test_agents.py  test_apply_cmd.py  test_cli.py  test_config.py  test_e2e.py  test_enable_disable.py  test_frameworks.py  test_git.py  test_interactive.py  test_llm.py  test_mcp.py  test_new_agents.py  test_orchestrator.py  test_reporting.py  test_security.py  test_selector.py  test_streaming.py  test_token_tracker.py
vscode-extension/: package.json  tsconfig.json
web/: next.config.ts  package.json  tsconfig.json
(+178 files in other folders)
